Mon Nov 14 06:39:28 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:

          Fixed unused arguments.

Sun Nov 13 21:40:34 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:

          Fixed signature for virtual override.

        * tests/Mixed_Sync_ASync_Events/main.cpp:

          Fixed WChar build error.

Sun Nov 13 12:00:36 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Extended test.

Sun Nov 13 11:31:21 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test_i.h:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Fixed more Win32 warnings and compile errors :-(

Sun Nov 13 11:03:23 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test.idl:
        * tests/Mixed_Sync_ASync_Events/test_i.h:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Fixed Win32 compiler errors.

Sat Nov 12 10:41:33 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Transport.h:

          Fixed compile errors because of core changes from branch merge.

Fri Nov 11 11:22:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged rw_block_strategy branch.

        === start changelog ===

        Thu Nov 10 08:04:29 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * TAO/tests/Bug_3531b_Regression/server.cpp:

                  Fixed compiler error due to core changes.

        Wed Nov  9 08:24:29 UTC 2011  Martin Corino  <mcorino@remedy.nl>
